--- a/.github/workflows/added-error-handling.yml
+++ b/.github/workflows/added-error-handling.yml
@@ -17,13 +17,13 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: '3.10'  
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install -r requirements.txt
+          pip install -r requirements.txt || echo "requirements.txt not found, continuing..."
 
       - name: Run script (test error handling)
         run: |
-          graphhopper_parse-json_1.py
+          python graphhopper_parse-json_1.py
