--- a/.github/workflows/added-error-handling.yml
+++ b/.github/workflows/added-error-handling.yml
@@ -13,21 +13,21 @@ jobs:
       CI: true  # Used in script to bypass interactive input
 
     steps:
-      - name: 📥 Checkout Repository
+      - name: Checkout Repository
         uses: actions/checkout@v3
 
-      - name: 🐍 Set up Python
+      - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: 3.10
+          python-version: 3.12
 
-      - name: 📦 Install Dependencies
+      - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt || echo "No requirements.txt found."
 
-      - name: ✅ Simulate Test for Error Handling Feature
+      - name: Simulate Test for Error Handling Feature
         run: |
           echo "Simulating successful test of the Error Handling Feature..."
-          echo "✅ All error handling logic assumed to be correct."
+          echo "All error handling logic assumed to be correct."
           exit 0
